--- a/Radius2U/css/RadiusPane.css
+++ b/Radius2U/css/RadiusPane.css
@@ -51,7 +51,7 @@
 #control-panel {
     float:left;
     width: 256px;
-    height: 100%;
+    height: 60%;
     top: 0px;
     left: 0px;
     z-index: 400;
@@ -59,18 +59,78 @@
 
 }
 
+/*Splash screen css styling*/
+#splash-screen {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background-color: #0040aa;
+    display: table;
+    opacity: .9;
+    z-index: 200;
+    text-align: center;
+}
+
+#splash-screen-text {
+    width:30%;
+    height:50%;
+    left: 35%;
+    top:25%;
+    overflow: hidden;
+    position: absolute;
+    display: table-cell;
+    vertical-align: middle;
+    line-height: normal;
+    color: white;
+    font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial, sans-serif;
+    font-size: 200%;
+
+
+
+}
+
+
 
 /* Added the css to control assignments div*/
 #assignment-panel {
-    width: 100%;
-    height: 100%;
-    top: 0%;
-    left: 0%;
+    width: 256px;
+    height: 60%;
+    top: 0px;
+    left: 0px;
     float: left;
     display: none;
-    position: inherit;
+    position: absolute;
     overflow: auto;
     color: darkslateblue;
+}
+
+#resources-panel {
+    width:256px;
+    height: 40%;
+    top: 60%;
+    left: 0%;
+    text-align: center;
+    float: left;
+    position: absolute;
+    color:darkslateblue;
+}
+
+.container {
+    display: inline-block;
+    height:80%;
+    vertical-align: middle;
+}
+
+#plus-sign-image{
+    margin-left: auto;
+    margin-right: auto;
+    width:50px;
+    height:50px;
+    opacity: .4;
+    
+
 }
 
 /*adding the hover feature to the table*/
